Hopefully fixed the Hero text on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,8 +321,11 @@ h6 {
 @media (max-width: 992px) {
   #hero {
     background-size: auto 100%;
-    background-position: 60% center;
-    padding-right: 160px;
+    background-position: 73% center;
+  }
+
+  #hero h1 {
+    padding-top: 200px;
   }
 }
 
